r273:    * dh_installdocs.1: clarified how the doc-id is determined. Closes: #44864    * dh_makeshlibs: will now overwrite existing debian/tmp/DEBIAN/shlibs      files, instead of erroring out. (Closes: #44828)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.45) unstable; urgency=low
+
+  * dh_installdocs.1: clarified how the doc-id is determined. Closes: #44864
+  * dh_makeshlibs: will now overwrite existing debian/tmp/DEBIAN/shlibs
+    files, instead of erroring out. (Closes: #44828)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 11 Sep 1999 13:15:33 -0700
+
 debhelper (2.0.44) unstable; urgency=low
 
   * dh_compress: fixed #ARGV bug (again) Closes: #44853
