--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -42,8 +42,8 @@ a doc-base control file, and will make this program automatically generate the
 postinst and prerm commands needed to interface with the doc-base package. See
 .BR dh_installdeb (1)
 for an explanation of how this works.
-Note that the doc-id will be determined from the doc-base control file 
-in question.
+Note that the doc-id will be determined from the "Document:" entry in the
+doc-base control file in question.
 .PP
 If your package needs to register more
 than one document, you need multiple files. To accomplish this, you can use
