r274:    * dh_installemacsen: the script fragments it generates now test for the      existance of emacs-package-install/remove before calling them. Though      a strict reading of the emacsen policy indicates that such a test      shouldn't be needed, there may be edge cases (cf bug 44924), where it      is.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.0.46) unstable; urgency=low
+
+  * dh_installemacsen: the script fragments it generates now test for the
+    existance of emacs-package-install/remove before calling them. Though
+    a strict reading of the emacsen policy indicates that such a test
+    shouldn't be needed, there may be edge cases (cf bug 44924), where it
+    is.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 12 Sep 1999 12:54:37 -0700
+
 debhelper (2.0.45) unstable; urgency=low
 
   * dh_installdocs.1: clarified how the doc-id is determined. Closes: #44864
