r276:    * dh_undocumented: installs links for X11 man pages to the undocumented.7      page in /usr/share/man. (Closes: #44909)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.47) unstable; urgency=low
+
+  * dh_undocumented: installs links for X11 man pages to the undocumented.7
+    page in /usr/share/man. (Closes: #44909)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 12 Sep 1999 13:12:34 -0700
+
 debhelper (2.0.46) unstable; urgency=low
 
   * dh_installemacsen: the script fragments it generates now test for the
