r277:    * 4 whole days without a debhelper upload! Can't let that happen. Let's see..    * dh_installperl.1: explain what you have to put in your control file      for the dependancies to be generated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.48) unstable; urgency=low
+
+  * 4 whole days without a debhelper upload! Can't let that happen. Let's see..
+  * dh_installperl.1: explain what you have to put in your control file
+    for the dependancies to be generated.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 16 Sep 1999 21:15:05 -0700
+
 debhelper (2.0.47) unstable; urgency=low
 
   * dh_undocumented: installs links for X11 man pages to the undocumented.7
