--- a/dh_perl.1
+++ b/dh_perl.1
@@ -11,6 +11,8 @@ the perl:Depends substitutions and adding them to substvars files.
 The program will look for the location of installed modules and will
 use this information to generate a dependency (at the present time
 it can only be perl5, perl5-thread, perl-5.00X or perl-5.00X-thread).
+The dependancy will be substituted into your package's control file wherever
+you place the token "${perl:Depends}".
 .P
 It will also look at #! lines of perl scripts in order to be able
 to calculate a dependency for perl scripts and not only perl modules.
