--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.49) unstable; urgency=low
+
+  * dh_shlibdeps: detect statically linked binaries and don't pass them to
+    dpkg-shlibdeps.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 17 Sep 1999 00:28:59 -0700
+
 debhelper (2.0.48) unstable; urgency=low
 
   * 4 whole days without a debhelper upload! Can't let that happen. Let's see..
