r279:    * dh_shlibdeps: detect statically linked binaries and don't pass them to      dpkg-shlibdeps.    * dh_installdeb: debconf support.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (2.0.49) unstable; urgency=low
 
   * dh_shlibdeps: detect statically linked binaries and don't pass them to
     dpkg-shlibdeps.
+  * dh_installdeb: debconf support.
 
  -- Joey Hess <joeyh@master.debian.org>  Fri, 17 Sep 1999 00:28:59 -0700
 
