--- a/dh_installdeb.1
+++ b/dh_installdeb.1
@@ -17,6 +17,8 @@ the DEBIAN directory:
  	prerm
  	shlibs
  	conffiles
+	config
+	templates
 .P
 (For packages other than the first binary package listed in debian/control,
 you must prefix these filenames with then name of the "package.", for example,
