--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.50) unstable; urgency=medium
+
+  * Oops. Fixed dh_shlibdeps so it actually generates dependancies, broke in
+    last version.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 18 Sep 1999 19:00:10 -0700
+
 debhelper (2.0.49) unstable; urgency=low
 
   * dh_shlibdeps: detect statically linked binaries and don't pass them to
