r281:    * dh_installdocs: create the compatability symlink before calling      install-docs. I'm told this is better in some cases. (Closes: #45608)    * examples/rules.multi2: clarified what you have to comment/uncomment.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.51) unstable; urgency=low
+
+  * dh_installdocs: create the compatability symlink before calling
+    install-docs. I'm told this is better in some cases. (Closes: #45608)
+  * examples/rules.multi2: clarified what you have to comment/uncomment.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 20 Sep 1999 12:43:09 -0700
+
 debhelper (2.0.50) unstable; urgency=medium
 
   * Oops. Fixed dh_shlibdeps so it actually generates dependancies, broke in
