--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.52) unstable; urgency=low
+
+  * dh_movefiles: if the wildcards in the filelist expand to nothing,
+    don't do anything, rather than crashing.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 23 Sep 1999 15:18:00 -0700
+
 debhelper (2.0.51) unstable; urgency=low
 
   * dh_installdocs: create the compatability symlink before calling
