r283:    * Minor changes to rules.multi2.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.53) unstable; urgency=low
+
+  * Minor changes to rules.multi2.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 27 Sep 1999 13:57:17 -0700
+
 debhelper (2.0.52) unstable; urgency=low
 
   * dh_movefiles: if the wildcards in the filelist expand to nothing,
