r284:    * Enhanced debconf support -- the database is now cleaned up on package      purge.    * Broke all debconf support off into a dh_installdebconf script. This      seems conceptually a little cleaner.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (2.0.54) unstable; urgency=low
+
+  * Enhanced debconf support -- the database is now cleaned up on package
+    purge.
+  * Broke all debconf support off into a dh_installdebconf script. This
+    seems conceptually a little cleaner.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 28 Sep 1999 16:12:53 -0700
+
 debhelper (2.0.53) unstable; urgency=low
 
   * Minor changes to rules.multi2.
