r285:    * Fixed quoting problem in examples/rules.multi (Closes: #46254)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.55) unstable; urgency=low
+
+  * Fixed quoting problem in examples/rules.multi (Closes: #46254)
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 29 Sep 1999 12:06:59 -0700
+
 debhelper (2.0.54) unstable; urgency=low
 
   * Enhanced debconf support -- the database is now cleaned up on package
