--- a/dh_installmodules.1
+++ b/dh_installmodules.1
@@ -8,7 +8,7 @@ dh_installmodules \- register modules with modutils
 dh_installmodules is a debhelper program that is responsible for registering
 kernel modules with modutils.
 .P
-A file named debian/package.modules (debian/modules my be used for the first
+A file named debian/package.modules (debian/modules may be used for the first
 binary package in debian/control) will be installed as etc/modutils/package
 in the package build directory.
 .P
