r289:    * Added note to man pages of commands that use autoscript to note they are      not idempotent.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.57) unstable; urgency=low
+
+  * Added note to man pages of commands that use autoscript to note they are
+    not idempotent.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  1 Oct 1999 13:18:20 -0700
+
 debhelper (2.0.56) unstable; urgency=low
 
   * Fiddlesticks. The neat make trick I was using in rules.multi2 failed if
