--- a/dh_installinfo.1
+++ b/dh_installinfo.1
@@ -45,6 +45,10 @@ for a list of environment variables that affect all debhelper commands.
 .BR debhelper (1)
 .TP
 .BR install-info (8)
+.SH NOTES
+Note that this command is not idempotent. "dh_clean -k" should be called
+between invocations of this command. Otherwise, it may cause multiple
+instances of the same text to be added to maintainer scripts.
 .SH BUGS
 It's impossible to specify filenames with spaces or other whitespace in them
 in debian/info file. This is more a historical design flaw than a bug.
