--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -1,52 +1,49 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLMENU 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_installmenu \- install debian menu files into package build directories
 .SH SYNOPSIS
 .B dh_installmenu
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[debhelper options] [-n]"
 .SH "DESCRIPTION"
 dh_installmenu is a debhelper program that is responsible for installing
-fils used by the debian menu package into package build directories.
+files used by the debian menu package into package build directories. 
 .P
-If a file named debian/menu exists, then it is installed into
+It also automatically generates the postinst and postrm commands needed to 
+interface with the debian menu package. See 
+.BR dh_installdeb (1)
+for an explanation of how this works.
+.P
+If a file named debian/package.menu exists, then it is installed into
 usr/lib/menu/package in the package build directory. This is a debian menu
 file.
 .P
-If a file named debian/menu-method exits, then it is installed into
+If a file named debian/package.menu-method exits, then it is installed into
 etc/menu-methods/package in the package build directory. This is a debian
 menu method file.
 .P
-For packages other than the first binary package listed in
-the control file, use debian/package.menu and debian/package.menu-method 
-instead (replace "package" with the name of the package.)
+For the first first binary package listed in the control file, you may use
+debian/menu and debian/menu-method instead.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Install menu files into all architecture dependent packages.
-.TP
-.B \-i
-Install menu files into all architecture independent packages.
-.TP
-.B \-ppackage
-Install menu files into the package named "package".
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
+.B \-n, \--noscripts
+Do not modify postinst/postrm scripts.
 .SH ENVIRONMENT
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
+.SH NOTES
+Note that this command is not idempotent. "dh_clean -k" should be called
+between invocations of this command. Otherwise, it may cause multiple
+instances of the same text to be added to maintainer scripts.
+x.SH "SEE ALSO"
 .TP
-.I DH_VERBOSE
-Enables verbose mode
-.SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
-,
-.BR menufile (1)
+.BR debhelper (1)
+.TP
+.BR menufile (5)
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
