--- a/dh_installpam.1
+++ b/dh_installpam.1
@@ -23,6 +23,10 @@ for a list of options common to all debhelper commands.
 See
 .BR debhelper (1)
 for a list of environment variables that affect all debhelper commands.
+.SH NOTES
+Note that this command is not idempotent. "dh_clean -k" should be called
+between invocations of this command. Otherwise, it may cause multiple
+instances of the same text to be added to maintainer scripts.
 .SH "SEE ALSO"
 .TP
 .BR debhelper (1)
