--- a/dh_installxaw.1
+++ b/dh_installxaw.1
@@ -8,13 +8,13 @@ dh_installxaw \- install xaw wrappers config files into package build directorie
 dh_installxaw is a debhelper program that is responsible for installing
 xaw wrappers config files into package build directories. 
 .P
-It also automatically generates the postinst and postrm commands needed to 
+It also automatically generates the postinst, prerm, and postrm commands needed to 
 interface with the debian xaw-wrappers package. See 
 .BR dh_installdeb (1)
 for an explanation of how this works.
 .P
 If a file named debian/package.xaw exists, then it is installed into
-usr/lib/xaw-wrappers/conf/package in the package build directory.
+usr/lib/xaw-wrappers/config/package in the package build directory.
 .P
 For the first first binary package listed in the control file, you may use
 debian/xaw instead.
@@ -26,11 +26,15 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-n, \--noscripts
-Do not modify postinst/postrm scripts.
+Do not modify postinst/prerm/postrm scripts.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
 for a list of environment variables that affect all debhelper commands.
+.SH NOTES
+Note that this command is not idempotent. "dh_clean -k" should be called
+between invocations of this command. Otherwise, it may cause multiple
+instances of the same text to be added to maintainer scripts.
 .SH "SEE ALSO"
 .TP
 .BR debhelper (1)
