r290:    * Dh_Lib.pm: fixed bug in xargs() that made boundry words be skipped.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.58) unstable; urgency=low
+
+  * Dh_Lib.pm: fixed bug in xargs() that made boundry words be skipped.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  3 Oct 1999 18:55:29 -0700
+
 debhelper (2.0.57) unstable; urgency=low
 
   * Added note to man pages of commands that use autoscript to note they are
