r291:    * dh_installdocs: if $TMP/usr/share/doc/$PACKAGE is a broken symlink,      leaves it alone, assumming that the maintainer knows what they're doing      and is probably linking to the doc dir of another package.      (Closes: #46183)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (2.0.59) unstable; urgency=low
+
+  * dh_installdocs: if $TMP/usr/share/doc/$PACKAGE is a broken symlink,
+    leaves it alone, assumming that the maintainer knows what they're doing
+    and is probably linking to the doc dir of another package. 
+    (Closes: #46183)
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  4 Oct 1999 16:27:28 -0700
+
 debhelper (2.0.58) unstable; urgency=low
 
   * Dh_Lib.pm: fixed bug in xargs() that made boundry words be skipped.
