--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.60) unstable; urgency=low
+
+  * dh_compress: After compressing an executable, changes the file mode to
+    644. Executable .gz files are silly. Closes: #46383
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  6 Oct 1999 13:05:14 -0700
+
 debhelper (2.0.59) unstable; urgency=low
 
   * dh_installdocs: if $TMP/usr/share/doc/$PACKAGE is a broken symlink,
