--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.61) unstable; urgency=low
+
+  * Clarified rules.multi2 comment. Closes: #46828
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  9 Oct 1999 18:21:02 -0700
+
 debhelper (2.0.60) unstable; urgency=low
 
   * dh_compress: After compressing an executable, changes the file mode to
