r295:    * Corrected a path name in dh_installxfonts. Closes: #48315

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (2.0.64) unstable; urgency=low
+
+  * Corrected a path name in dh_installxfonts. Closes: #48315
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 25 Oct 1999 14:24:03 -0700
+
+debhelper (2.0.63) unstable; urgency=low
+
+  * Removed install-stamp cruft in all example rules files. Closes: #47175
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 12 Oct 1999 14:23:09 -0700
+
 debhelper (2.0.62) unstable; urgency=low
 
   * Fixed problem with dh_installemacsen options not working, patch from
