r296:    * dh_builddeb: -u can be passed to this command now, followed by      any extra parameters you want to pass to dpkg-deb (Closes: #48394)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.65) unstable; urgency=low
+
+  * dh_builddeb: -u can be passed to this command now, followed by
+    any extra parameters you want to pass to dpkg-deb (Closes: #48394)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 26 Oct 1999 10:14:57 -0700
+
 debhelper (2.0.64) unstable; urgency=low
 
   * Corrected a path name in dh_installxfonts. Closes: #48315
