--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.66) unstable; urgency=low
+
+  * Fixed some problems with dh_installxfonts font dirs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 28 Oct 1999 00:46:43 -0700
+
 debhelper (2.0.65) unstable; urgency=low
 
   * dh_builddeb: -u can be passed to this command now, followed by
