--- a/debian/changelog
+++ b/debian/changelog
@@ -39,7 +39,7 @@ debhelper (2.0.62) unstable; urgency=low
       dh_ script and out of the snippet. If the maintainer plays tricks on
       us, mkfontdir will blow up satisfactorally anyway.
     - So, the snippet is 9 lines long now, down from 20-some.
-    - I realize this isn't following the reccommendations made in Brandon's
+    - I realize this isn't following the reccommendations made in Brando^Hen's
       font policy. I'll fight it out with him. :-)
     - In postrm fragment, used rmdir -p to remove as many parent directories
       as I can.
