r300:    * dh_installdebconf: Modified to use new confmodule debconf library.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.67) unstable; urgency=low
+
+  * dh_installdebconf: Modified to use new confmodule debconf library.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 29 Oct 1999 15:24:47 -0700
+
 debhelper (2.0.66) unstable; urgency=low
 
   * Fixed some problems with dh_installxfonts font dirs.
