r301:    * dh_installxfonts: Patch from Anthony Wong to fix directory searching.      Closes: #48931

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.68) unstable; urgency=low
+
+  * dh_installxfonts: Patch from Anthony Wong to fix directory searching.
+    Closes: #48931
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  1 Nov 1999 14:46:04 -0800
+
 debhelper (2.0.67) unstable; urgency=low
 
   * dh_installdebconf: Modified to use new confmodule debconf library.
