r303:    * Added build dependancies to this package. That was easy; it just uses      perl5 for regression testing, the rest of its build-deps are things      in base.    * dh_version.1: Added note that this program is quickly becoming obsolete.    * doc/README, doc/from-debstd: Added reminders that if you use debhelper,      you need to add debhelper to your Build-Depends line.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (2.0.70) unstable; urgency=low
+
+  * Added build dependancies to this package. That was easy; it just uses
+    perl5 for regression testing, the rest of its build-deps are things
+    in base.
+  * dh_version.1: Added note that this program is quickly becoming obsolete.
+  * doc/README, doc/from-debstd: Added reminders that if you use debhelper,
+    you need to add debhelper to your Build-Depends line.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  4 Nov 1999 21:24:37 -0800
+
 debhelper (2.0.69) unstable; urgency=low
 
   * dh_shlibdeps: added -l option, which lets you specify a path that
