r304:    * Oh, the build dependancies include all of debhelper's regualr      dependancies as well, since it builds using itself.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.71) unstable; urgency=low
+
+  * Oh, the build dependancies include all of debhelper's regualr
+    dependancies as well, since it builds using itself.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  5 Nov 1999 14:14:26 -0800
+
 debhelper (2.0.70) unstable; urgency=low
 
   * Added build dependancies to this package. That was easy; it just uses
