r305:    * Oh, the build dependancies include all of debhelper's regular      dependancies as well, since it builds using itself.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (2.0.71) unstable; urgency=low
 
-  * Oh, the build dependancies include all of debhelper's regualr
+  * Oh, the build dependancies include all of debhelper's regular
     dependancies as well, since it builds using itself.
 
  -- Joey Hess <joeyh@master.debian.org>  Fri,  5 Nov 1999 14:14:26 -0800
