r306:    * Corrected slash substitution problem in dh_installwm.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.72) unstable; urgency=low
+
+  * Corrected slash substitution problem in dh_installwm.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  9 Nov 1999 15:00:21 -0800
+
 debhelper (2.0.71) unstable; urgency=low
 
   * Oh, the build dependancies include all of debhelper's regular
