r307:    * Actually, debhelper build-depends on perl-5.005.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+debhelper (2.0.73) unstable; urgency=low
+
+  * Actually, debhelper build-depends on perl-5.005.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Nov 1999 21:43:55 -0800
+
 debhelper (2.0.72) unstable; urgency=low
 
   * Corrected slash substitution problem in dh_installwm.
 
- -- Joey Hess <joeyh@master.debian.org>  Tue,  9 Nov 1999 15:00:21 -0800
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Nov 1999 21:43:47 -0800
 
 debhelper (2.0.71) unstable; urgency=low
 
