--- a/dh_shlibdeps.1
+++ b/dh_shlibdeps.1
@@ -3,7 +3,7 @@
 dh_shlibdeps \- calculate shared library dependancies
 .SH SYNOPSIS
 .B dh_shlibdeps
-.I "[debhelper options] [-uparams] [-ldirectory]"
+.I "[debhelper options] [-ldirectory] [-uparams] [-- params]"
 .SH "DESCRIPTION"
 dh_shlibdeps is a debhelper program that is responsible for calculating
 shared library dependancies for all executables found in the package build
@@ -20,6 +20,8 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-uparams, \--dpkg-shlibdeps-params=params
+.TP
+.B \-\- params
 Pass "params" to 
 .BR dpkg-shlibdeps (1)
 .TP
