--- a/dh_builddeb.1
+++ b/dh_builddeb.1
@@ -3,7 +3,7 @@
 dh_builddeb \- build debian packages
 .SH SYNOPSIS
 .B dh_builddeb
-.I "[debhelper options] [--destdir=directory] [-uparams]"
+.I "[debhelper options] [--destdir=directory] [-uparams] [-- params]"
 .SH "DESCRIPTION"
 dh_builddeb simply calls
 .BR dpkg (8)
@@ -20,6 +20,8 @@ Use this if you want the generated .deb files to be put in a directory other
 than the default of ".."
 .TP
 .B \-uparams
+.TP
+.B \-\- params
 Pass "params" to 
 .BR dpkg-deb (1)
 when it is used to build the package.
