--- a/dh_gencontrol.1
+++ b/dh_gencontrol.1
@@ -3,7 +3,7 @@
 dh_gencontrol \- generate and install control file
 .SH SYNOPSIS
 .B dh_gencontrol
-.I "[debhelper options] [-uparams]"
+.I "[debhelper options] [-uparams] [-- params]"
 .SH "DESCRIPTION"
 dh_gencontrol is a debhelper program that is responsible for generating 
 control files, and installing them into the DEBIAN directory with the proper
@@ -19,6 +19,8 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-uparams, \--dpkg-gencontrol-params=params
+.TP
+.B \-\- params
 Pass "params" to 
 .BR dpkg-gencontrol (1)
 .SH ENVIRONMENT
